[package]
name = "Rust-ProcHollow"
Author = "Azr43lKn1ght"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel32-sys = "0.2.2"
winapi = {version = "0.3.8", features=[
    "winnt",
    "memoryapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "winnt",
    "minwindef",
    "winbase",
    "handleapi",
    "libloaderapi",
    "wow64apiset",
]}
windows = { version = "0.58", features = ["Win32_Storage_FileSystem","Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Foundation"
]}
